# topscrape

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
tests/: test_topscrape.py
topscrape/: __init__.py  cli.py  exceptions.py  fetcher.py  fields.py  models.py
topscrape/selectors/: __init__.py  engine.py
